--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,8 @@ footer a {
     margin-bottom:35px;
     padding: 0 100px 20px 100px;
     border-bottom: 3px solid;
-    border-color: #fce
+    border-color: #fce138;
+    display: inline-block;
 }
 .steps {
     text-align: center;
@@ -129,10 +130,12 @@ footer a {
     font-size: 55px;
     color: #024e76;
     margin-bottom: 35px;
-    padding: 0 100px 20 px 
+    padding: 0 100px 20px;
 }
 .primary-border {
-    border-color:#fce138
+    border-color:#fce138;
+    border-bottom: 3px solid;
+    display:inline-block;
 }
 .secondary-border {
     border-color: #39A6B2
