--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,7 +129,6 @@ footer a {
     font-size: 16px;
 }
 .intro {
-    text-align: center;
 }
 .intro p {
     line-height: 1.7;
@@ -137,6 +136,7 @@ footer a {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 .intro h2 {
     font-size:55px;
@@ -148,16 +148,16 @@ footer a {
     display: inline-block;
 }
 .steps {
-    text-align: center;
     background: #fce138;
 }
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px;
-    display:inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 .primary-border {
     border-color:#fce138;
@@ -188,7 +188,6 @@ footer a {
     font-size: 38px;
 }
 .trainers {
-    text-align: center;
 }
 .trainer {
     width: 900px;
@@ -227,7 +226,6 @@ footer a {
     line-height: 1.3;
 }
 .contact {
-    text-align: center;
     background: #024e76;
 }
 .contact h2 {
@@ -258,4 +256,7 @@ footer a {
 }
 .contact-info a {
     color: #fce138
+}
+.flex-row {
+    display:flex;
 }
