Created Nested Flexboxes for What You Do section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,8 +195,19 @@ footer a {
 }
 .step-info {
     flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
 }
-.trainers {
+.step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+}
+.step-img img {
+    max-width: 100%;
+}
+.step-text {
+    flex: 12;
 }
 .trainer {
     width: 900px;
