--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,7 +69,7 @@ footer a {
 }
 .hero {
     padding: 60px;
-    background-image: url(../Images/background\ image.jpeg);
+    background-image: url(../Images/hero-bg.jpg);
     background-size: cover;
     background-position: center;
     display: flex;
