--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,8 +38,8 @@ header nav ul {
     list-style: none;
 
 }
-header nav ul a {
-    margin: 0 30px;
+header nav ul li a {
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -74,6 +74,7 @@ footer a {
     display: flex;
     justify-content: center;
     flex-wrap:wrap;
+    align-items:flex-start;
 
 }
 .hero-cta {
@@ -82,7 +83,7 @@ footer a {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 .hero-cta h2 {
     font-style:italic;
@@ -149,7 +150,7 @@ footer a {
     background: #fce138;
 }
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -307,4 +308,23 @@ footer a {
 
 .right{
     margin-right: 5%;
+}
+
+/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS */
+@media screen and (max-width:980px) {
+    header h1 a {
+        /*This will be applied to every screen smaller than 980px*/
+        color:tomato;
+    }
+    /* MEDIA QUERY FOR TABLETS AND SMALLER */
+    @media screen and (max-width:768px) {
+        header h1 {
+            font-size:80px;
+        }
+    }
+/*MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+@media screen and (max-width: 575px) {
+    header h1 {
+        font-size: 100px;
+    }
 }
